@@ -10,7 +10,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="NZBGet"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="10"
+PKG_REV="11"
 PKG_SHORTDESC="$PKG_ADDON_NAME: efficient Usenet downloader"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is an efficient Usenet downloader"
 PKG_DISCLAIMER="Keep it legal and carry on"
